Bugfix: mobile menu padding too much

--- a/css/style.css
+++ b/css/style.css
@@ -88,7 +88,6 @@ nav{
     margin-bottom: .2rem;
   }
   #menu {
-    padding-top: .3rem;
     display: flex;
     justify-content: space-around;
   }
